--- a/crates/core/transaction/Cargo.toml
+++ b/crates/core/transaction/Cargo.toml
@@ -9,9 +9,12 @@ penumbra-proto = { path = "../../proto/" }
 decaf377-ka = { path = "../../crypto/decaf377-ka/" }
 decaf377-fmd = { path = "../../crypto/decaf377-fmd/" }
 penumbra-tct = { path = "../../crypto/tct" }
-penumbra-proof-params = { path = "../../crypto/proof-params/", features = ["proving-keys"] }
+penumbra-proof-params = { path = "../../crypto/proof-params/", features = [
+    "proving-keys",
+] }
 penumbra-chain = { path = "../component/chain/", default-features = false }
 penumbra-governance = { path = "../component/governance/", default-features = false }
+penumbra-compact-block = { path = "../component/compact-block/", default-features = false }
 penumbra-shielded-pool = { path = "../component/shielded-pool/", default-features = false }
 penumbra-sct = { path = "../component/sct/", default-features = false }
 penumbra-stake = { path = "../component/stake", default-features = false }
@@ -65,5 +68,11 @@ serde_json = "1"
 [features]
 default = ["std", "parallel"]
 std = ["ark-ff/std", "ibc-types/std"]
-parallel = ["tokio", "penumbra-shielded-pool/parallel", "penumbra-dex/parallel", "penumbra-governance/parallel", "penumbra-stake/parallel"]
+parallel = [
+    "tokio",
+    "penumbra-shielded-pool/parallel",
+    "penumbra-dex/parallel",
+    "penumbra-governance/parallel",
+    "penumbra-stake/parallel",
+]
 download-proving-keys = ["penumbra-proof-params/download-proving-keys"]
