Add dummy psumcoordd crate
This will eventually be used as the coordinator, for now not much
functionality beyond a basic hello world and view server integration.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ members = [
   "crates/bin/pd",
   "crates/bin/pclientd",
   "crates/bin/pcli",
+  "crates/bin/psumcoordd",
   "crates/wasm",
   "crates/narsil/narsil",
   "crates/test/tct-property-test",
