ibc: split up query rpc implementations

--- a/crates/core/component/ibc/Cargo.toml
+++ b/crates/core/component/ibc/Cargo.toml
@@ -16,7 +16,7 @@ component = [
 default = ["component", "std"]
 std = ["ibc-types/std"]
 docsrs = []
-rpc = ["dep:tonic"]
+rpc = ["dep:tonic", "ibc-proto/client", "ibc-proto/server"]
 
 [dependencies]
 # Workspace dependencies
