--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -9,3 +9,7 @@ plugins:
   - plugin: buf.build/protocolbuffers/go
     out: go/gen
     opt: paths=source_relative
+  - plugin: buf.build/community/stephenh-ts-proto
+    out: gen/ts
+    opt:
+      - forceLong=string
